--- a/FFXIVWeather/FFXIVWeather.csproj
+++ b/FFXIVWeather/FFXIVWeather.csproj
@@ -3,6 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 	<LangVersion>8.0</LangVersion>
+	<Authors>karashiiro</Authors>
+	<Copyright>2020</Copyright>
+	<RepositoryUrl>https://github.com/karashiiro/FFXIVWeather</RepositoryUrl>
+	<PackageProjectUrl>https://github.com/karashiiro/FFXIVWeather</PackageProjectUrl>
+	<PackageTags>ffxiv</PackageTags>
+	<Description>FFXIV weather forecast library for C# applications</Description>
+	<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
